<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>drake</name>
  <version>0.0.0</version>
  <description>
    Model-Based Design and Verification for Robotics.
  </description>
  <maintainer email="drake-users@mit.edu">Drake Users</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <build_depend>nasm</build_depend>
</package>
