<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>drake</name>
  <version>0.0.0</version>
  <description>
    Model-Based Design and Verification for Robotics.
  </description>
  <maintainer email="drake-users@mit.edu">Drake Users</maintainer>
  <license>BSD</license>

 <!-- Missing in rosdistro
   - libglx-dev (installed indirectly by qtbase5-dev)
   - libmumps-seq-dev (installed indirectly by coinor-libipopt-dev)
   - libjchart2d-java [CRITICAL]
  -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>
  <buildtool_depend>eigen</buildtool_depend>
  <buildtool_depend>java</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <buildtool_depend>clang</buildtool_depend>
  <build_depend>coinor-libipopt-dev</build_depend>
  <build_depend>libclang-dev</build_depend>
  <build_depend>libglib-dev</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>nasm</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>gfortran</build_depend>
</package>
